--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ h5{
     width: 100%;
     /* padding-right: 50px; */
     /* padding-left: 50px; */
-    padding-top: 50vh;
+    /* padding-top: 50vh; */
 }
 
 article{
