--- a/css/general.css
+++ b/css/general.css
@@ -214,6 +214,153 @@ a{
     height: 100vh;
 }
 
+        /* password area*/
+
+        #dialogText {
+                font-size: 46px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 150%;
+                padding-top: 0px;
+                padding-bottom: 8px;
+                margin:0;
+                font-family: 'Montserrat', serif;
+                color: #7D4A4A;
+        }
+
+        #dialogText:after{
+            content: "Feel free to contact me for the password!";
+            display: block;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 160%;
+            font-family: 'Montserrat', serif;
+            margin-top: 24px;
+            margin-bottom: 56px;
+
+        }
+        
+        #dialogWrap {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: table;
+            background-color: #FFE9E8;
+        }
+        
+        #dialogWrapCell {
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle;
+        }
+        
+        #mainDialog {
+            max-width: 528px;
+            font-family: 'Montserrat', sans-serif;
+            margin: auto;
+            text-align: left;
+            color: #7D4A4A;
+        }
+        #mainDialog > * {
+           
+        }
+        #passArea {
+            
+        }
+        #passArea > * {
+            margin: 5px auto;
+        }
+        #pass {
+            width: 100%;
+            height: 32px;
+            font-size: 30px;
+            padding: 16px;
+            border-radius: 8px;
+            background-color: rgba(255,255,255,.7);
+            border: 2px solid white;
+        }
+
+        #pass:active, #pass:focus-visible{
+            border:2px solid #262AFF;
+            outline: none;
+        }
+        
+        #messageWrapper {
+            float: left;
+            vertical-align: middle;
+            line-height: 30px;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 160%;
+            font-family: 'Montserrat', serif;
+        }
+        
+        .notifyText {
+            display: none;
+        }
+        
+        #invalidPass {
+            color: red;
+        }
+        
+        #success {
+            color: green;
+        }
+        #passwordPrompt{
+             font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 160%;
+            font-family: 'Montserrat', serif;
+        }
+        #submitPass {
+            font-size: 20px;
+            border-radius: none;
+            background: none;
+            border: none;
+            /* float: left; */
+            padding: 0px;
+            cursor: pointer;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 160%;
+            color: #262AFF;
+            /* margin-top: 16px; */
+        }
+        #submitPass:hover{
+            cursor: pointer;
+            color: #0004ED;
+        }
+        #contentFrame {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        #attribution {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            text-align: center;
+            padding: 10px;
+            font-weight: bold;
+            font-size: 0.8em;
+        }
+        #attribution, #attribution a {
+            color: #999;
+        }
+        .error {
+            display: none;
+            color: red;
+        }
+
 @keyframes bodyanimation{
   0% {
     width: 25px;
