--- a/css/general.css
+++ b/css/general.css
@@ -263,6 +263,7 @@ a{
             margin: auto;
             text-align: left;
             color: #7D4A4A;
+            padding: 24px;
         }
         #mainDialog > * {
            
@@ -274,7 +275,7 @@ a{
             margin: 5px auto;
         }
         #pass {
-            width: 100%;
+            width: calc(100% - 32px);
             height: 32px;
             font-size: 30px;
             padding: 16px;
