fixed imgs not loading because of caps

--- a/css/general.css
+++ b/css/general.css
@@ -347,7 +347,7 @@ a{
             height: 100%;
         }
         #attribution {
-            position: absolute;
+            position: static;
             bottom: 0;
             left: 0;
             right: 0;
