--- a/css/general.css
+++ b/css/general.css
@@ -7,9 +7,10 @@
     --electric-blue: #262AFF;
     --pink: #FFBDF6;
     --purple: #6826F4;
-    --brown: #7D4A4A;
+    --brown: #6F3E3E;
     --link-color;
     --link-color-hover;
+    --spaceBetweenSections: 140px;
 }
 
 
@@ -24,7 +25,7 @@ body,html,.body-wrap{
 
 .top-bar{
     position: fixed;
-    z-index: 12;
+    z-index: 13;
     top: 0px;
     width: 100%;
     padding-left: 5%;
@@ -48,26 +49,22 @@ body,html,.body-wrap{
 }
 
 .top-bar.case-study{
-    /* background-color: white; */
-    /* mix-blend-mode: luminosity; */
     position: static;
 }
 
 .top-bar.case-study .name-color{
-    /* fill: #D9D500; */
-    /* mix-blend-mode: plus-lighter; */
     fill: var(--dark-blue2);
-    /* fill: #7D4A4A; */
+
 }
+
 .top-bar.case-study .name-small:hover .name-color{
     fill: var(--electric-blue);
 }
  body.other-page .name-small:hover .name-color{
     fill: var(--dark-blue2);
  }
-.top-bar.contact .name-color{
-    /* fill: #D9D500; */
-    /* mix-blend-mode: plus-lighter; */
+
+.top-bar.contact .name-color, .top-bar.how .name-color {
     fill: var(--brown);
 }
 
@@ -87,7 +84,7 @@ body.homepage{
     --link-color-hover: var(--pink);
 }
 
-body.case-study, body.other-page{
+body.case-study, body.other-page, body.how{
     --link-color: var(--electric-blue);
     --link-color-hover: var(--dark-blue);
 }
@@ -136,7 +133,49 @@ a{
     transition-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
 }
 
-#contact-page{
+.text-main{
+    max-width: 528px;
+    font-family: 'Montserrat', sans-serif;
+    margin: auto;
+    text-align: left;
+}
+
+.text-main h1{
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    padding-top: 0px;
+    /* padding-bottom: 8px; */
+    margin:0;
+    margin-top: var(--spaceBetweenSections);
+}
+@media only screen and (max-width: 580px){ 
+
+    .text-main{
+        margin:24px;
+    }
+
+    :root{
+        --spaceBetweenSections: 72px;
+    };
+    
+
+}
+.text-main p{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+    margin:0;
+    margin-top: 16px;
+}
+#how-its-made-page img{
+    margin: var(--spaceBetweenSections) auto;
+    width: 90%;
+    /* margin: auto; */
+}
+.overlay-page{
     height: 0px;
     width: 100%;
     /*  background-color: #FFDBD8;
@@ -149,7 +188,6 @@ a{
     /* display: none;*/
     opacity: 0;
     overflow: hidden;
-    z-index: 11;
     transition:opacity .2s cubic-bezier(0.7, 0.3, 0, 1);
     display: flex;
     justify-content: center;
@@ -157,9 +195,27 @@ a{
     flex-direction: column;
     text-align: center;
 }
-.top-links.contact-links{
-    margin-top: 0px;
+
+.overlay-page.display{
+   /* display: block;*/
+    opacity: 1;
+    height: 100vh;
 }
+
+#how-its-made-page{
+    z-index: 11;
+}
+
+#how-its-made-page .container{
+    height: 100vh;
+    overflow: auto;
+    /* padding-top: 100px; */
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-between-sections);
+    width: 100%;
+}
+
 .top-links.contact-links .link{
     margin-right: 0px;
 }
@@ -192,6 +248,10 @@ a{
     line-height: 200%;
 }
 
+#contact-page{
+    z-index: 12;
+}
+
 .contact-links{
     margin-top: 20px;
     /* display: flex; */
@@ -210,159 +270,155 @@ a{
 }
 
 
-#contact-page.display{
-   /* display: block;*/
-    opacity: 1;
-    height: 100vh;
+
+
+/* password area*/
+
+#dialogText {
+        font-size: 46px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 150%;
+        padding-top: 0px;
+        padding-bottom: 8px;
+        margin:0;
+        font-family: 'Montserrat', serif;
+        color: #7D4A4A;
 }
 
-        /* password area*/
+#dialogText:after{
+    content: "Feel free to contact me for the password!";
+    display: block;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+    font-family: 'Montserrat', serif;
+    margin-top: 24px;
+    margin-bottom: 56px;
 
-        #dialogText {
-                font-size: 46px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: 150%;
-                padding-top: 0px;
-                padding-bottom: 8px;
-                margin:0;
-                font-family: 'Montserrat', serif;
-                color: #7D4A4A;
-        }
+}
 
-        #dialogText:after{
-            content: "Feel free to contact me for the password!";
-            display: block;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 160%;
-            font-family: 'Montserrat', serif;
-            margin-top: 24px;
-            margin-bottom: 56px;
+#dialogWrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: table;
+    background-color: #FFE9E8;
+}
 
-        }
-        
-        #dialogWrap {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: table;
-            background-color: #FFE9E8;
-        }
-        
-        #dialogWrapCell {
-            display: table-cell;
-            text-align: center;
-            vertical-align: middle;
-        }
-        
-        #mainDialog {
-            max-width: 528px;
-            font-family: 'Montserrat', sans-serif;
-            margin: auto;
-            text-align: left;
-            color: #7D4A4A;
-            padding: 24px;
-        }
-        #mainDialog > * {
-           
-        }
-        #passArea {
-            
-        }
-        #passArea > * {
-            margin: 5px auto;
-        }
-        #pass {
-            width: calc(100% - 32px);
-            height: 32px;
-            font-size: 30px;
-            padding: 16px;
-            border-radius: 8px;
-            background-color: rgba(255,255,255,.7);
-            border: 2px solid white;
-        }
+#dialogWrapCell {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
 
-        #pass:active, #pass:focus-visible{
-            border:2px solid #262AFF;
-            outline: none;
-        }
-        
-        #messageWrapper {
-            float: left;
-            vertical-align: middle;
-            line-height: 30px;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 160%;
-            font-family: 'Montserrat', serif;
-        }
-        
-        .notifyText {
-            display: none;
-        }
-        
-        #invalidPass {
-            color: red;
-        }
-        
-        #success {
-            color: green;
-        }
-        #passwordPrompt{
-             font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 160%;
-            font-family: 'Montserrat', serif;
-        }
-        #submitPass {
-            font-size: 20px;
-            border-radius: none;
-            background: none;
-            border: none;
-            /* float: left; */
-            padding: 0px;
-            cursor: pointer;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 160%;
-            color: #262AFF;
-            /* margin-top: 16px; */
-        }
-        #submitPass:hover{
-            cursor: pointer;
-            color: #0004ED;
-        }
-        #contentFrame {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        #attribution {
-            position: static;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            text-align: center;
-            padding: 10px;
-            font-weight: bold;
-            font-size: 0.8em;
-        }
-        #attribution, #attribution a {
-            color: #999;
-        }
-        .error {
-            display: none;
-            color: red;
-        }
+#mainDialog {
+    max-width: 528px;
+    font-family: 'Montserrat', sans-serif;
+    margin: auto;
+    text-align: left;
+    color: #7D4A4A;
+    padding: 24px;
+}
+#mainDialog > * {
+   
+}
+#passArea {
+    
+}
+#passArea > * {
+    margin: 5px auto;
+}
+#pass {
+    width: calc(100% - 32px);
+    height: 32px;
+    font-size: 30px;
+    padding: 16px;
+    border-radius: 8px;
+    background-color: rgba(255,255,255,.7);
+    border: 2px solid white;
+}
+
+#pass:active, #pass:focus-visible{
+    border:2px solid #262AFF;
+    outline: none;
+}
+
+#messageWrapper {
+    float: left;
+    vertical-align: middle;
+    line-height: 30px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+    font-family: 'Montserrat', serif;
+}
+
+.notifyText {
+    display: none;
+}
+
+#invalidPass {
+    color: red;
+}
+
+#success {
+    color: green;
+}
+#passwordPrompt{
+     font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+    font-family: 'Montserrat', serif;
+}
+#submitPass {
+    font-size: 20px;
+    border-radius: none;
+    background: none;
+    border: none;
+    /* float: left; */
+    padding: 0px;
+    cursor: pointer;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 160%;
+    color: #262AFF;
+    /* margin-top: 16px; */
+}
+#submitPass:hover{
+    cursor: pointer;
+    color: #0004ED;
+}
+#contentFrame {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+#attribution {
+    position: static;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+    font-size: 0.8em;
+}
+#attribution, #attribution a {
+    color: #999;
+}
+.error {
+    display: none;
+    color: red;
+}
 
 @keyframes bodyanimation{
   0% {
@@ -410,40 +466,26 @@ a{
 
  /* ------------------------------------------------------------------------------------------------ */
 
-;
-    gap: 8px;
-    max-width: 500px){
-    .name-small{
-        width: 135px;
-    top: 24px;
-    }
-    .top-links
-    h1{
-    font-size: 12px;
-    }
-    .top-links{
-    top: 24px;
-    }
-    #top-line-container
+.how-link{
+    position: absolute;
+    right: 5%;
+    bottom: 2%;
+    color: var(--electric-blue);
+}
+
+.how-link:hover{
+    color: var(--link-color-hover);
+    cursor: pointer;
+}
+#top-line-container
     p {
     font-size: 24px;
     }
 
   
 }
-@media screen and (
-    max-width: 800px){ 
 
-    .top-bar.projects{
-       /* background-color: white; */
-       /* padding-bottom: 10px; */
-    }
 
-    .name-color.projects{
-    /* fill: #18006A; */
-    }
- 
 
-};
-    gap: 5;
+
  
