--- a/css/general.css
+++ b/css/general.css
@@ -32,6 +32,7 @@ body,html,.body-wrap{
     padding-right: 5%;
     padding-top: 32px;
     box-sizing: border-box;
+    /* height: 30px; */
 }
 
 
@@ -475,6 +476,7 @@ a{
     right: 5%;
     bottom: 2%;
     color: var(--electric-blue);
+    font-size: 14px;
 }
 
 .how-link:hover{
